# tvbingefriend-tvmaze-client

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish-package.yml  pytest.yml
tests/: bingefriend_tvmaze_client_test.py
tvbingefriend_tvmaze_client/: __init__.py  config.py  rate_limiter.py  reliability.py  retry_handler.py  tvmaze_api.py
